objects/Sales_Invoice_Total__c.object
<CustomObject>
    <description>Subtotals, taxes, discounts, etc. for Sales Invoice documents.</description>
    <fields>
        <fullName>Absolute_Value__c</fullName>
        <label>Absolute Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Value__c</fullName>
        <label>Percent Value</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice__c</fullName>
        <label>Sales Invoice</label>
        <referenceTo>Sales_Invoice__c</referenceTo>
        <relationshipName>R00N40000001bdkIEAQ</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>[Dep]Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Invoice Total</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Invoice Totals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>